# cyp

./: .gitignore  .travis.yml  CheckYourProof.hs  LICENSE  Main.hs  Proof.hs  README.md  Scratch.thy  TODO.md  TreeProof.hs  cheatsheet.md  cyp.cabal  itrev.cthy  master.hs  stack.yaml  student.hs  student2.hs  student3.hs
.github/workflows/: test.yml
examples/: itrev.cprf  itrev.cthy  length-append.cprf  length-append.cthy  trivial.cprf  trivial.cthy
src/Test/Info2/: Cyp.hs
src/Test/Info2/Cyp/: Env.hs  Parser.hs  Tasty.hs  Term.hs  Trace.hs  Types.hs  Util.hs
test/: Main.hs
test-data/neg/missing-case/: cout  cprf
test-data/neg/no-rule/: cout  cprf
test-data/neg/other-goal/: cout  cprf  cthy
test-data/neg/wrong-case/: cout  cprf
test-data/neg/wrong-ih/: cout  cprf
test-data/pos/bintree/: cprf  cthy
test-data/pos/bool/: cprf  cthy
test-data/pos/filter-filter/: cprf  cthy
test-data/pos/itrev/: cprf
test-data/pos/length-append/: cprf
test-data/pos/length-splice/: cprf  cthy
test-data/pos/map-filter/: cprf  cthy
test-data/pos/rev-filter/: cprf  cthy
test-data/pos/reverse-snoc/: cprf  cthy
test-data/pos/revrev/: cprf  cthy
test-data/pos/snoc-append/: cprf  cthy
test-data/pos/trivial-commutative/: cprf
test-data/pos/trvial/: cprf
