name:                cyp
version:             0.2.0.0
build-type:          Simple
cabal-version:       >=1.16

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -W
  exposed-modules:  
      Test.Info2.Cyp
    , Test.Info2.Cyp.Tasty
  other-modules:
      Test.Info2.Cyp.Env
    , Test.Info2.Cyp.Parser
    , Test.Info2.Cyp.Term
    , Test.Info2.Cyp.Trace
    , Test.Info2.Cyp.Types
    , Test.Info2.Cyp.Util
  build-depends:
      base ==4.*
    , containers ==0.5.*
    , directory ==1.2.*
    , filepath ==1.4.*
    , haskell-src-exts ==1.16.*
    , mtl ==2.2.*
    , parsec ==3.1.*
    , pretty ==1.1.*
    , pretty-show ==1.6.*
    , tagged ==0.8.*
    , tasty ==0.11.*

executable cyp
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -W
  build-depends:
      base ==4.*
    , cyp
    , pretty ==1.1.*

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -W
  build-depends:
      base ==4.*
    , cyp
    , tasty ==0.11.*
